User holiday/checking web layout
